--- a/style.css
+++ b/style.css
@@ -538,8 +538,11 @@ section h2 .fab {
 /* Footer */
 .footer {
   background-color: var(--terminal-background);
-  color: var(--terminal-text-secondary);
   font-size: 0.9rem;
   padding: 1.5rem 0;
   border-top: 1px dashed var(--terminal-border);
+}
+
+.footer-text {
+  color: var(--terminal-text-primary); /* Branco */
 }
